# automl_CLI

./: .gitignore  LICENSE  README.md  adjust_season_start_date.py  backup.json  backup_restore_test.sh  debug_plot.html  pyproject.toml  requirements.txt  run_tests.sh  script.py  task_workflow_tests.sh  tasks.db  temp_backup.py  test_plot.html  todo.py
automl_todolist/: calendar_sync.py  config.py  database.py  exceptions.py  models.py  services.py  todo.py
taskmaster_cli/: config.py  database.py  exceptions.py  models.py  services.py  todo.py
tests/: backup_restore_test.sh  run_tests.sh  task_workflow_tests.sh
