[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmaster-cli"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A command-line to-do list application for detailed life and task tracking."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "rich",
    "sqlalchemy",
]

[project.scripts]
todo = "todo:app" 